<resources>
    <string name="app_name">Lista de Alunos</string>


    //String Facebook
    <string name="facebook_app_id">161082226142582</string>
    <string name="fb_login_protocol_scheme">fb161082226142582</string>
    <string name="facebook_client_token">ec8c29f2c2f375fc56b62e66904082df</string>

    //Mensagens de erro
    <string name="erro_senha_pequena" translatable="false">Senha com 6 digitos ou mais.</string>
    <string name="erro_sem_conexao_internet" translatable="false">Sem conexão com a internet</string>
    <string name="erro_login_password" translatable="false">Email ou senha estão incorretos</string>
    <string name="erro_logar" translatable="false">Erro ao logar!</string>
    <string name="erro_usuario_ja_cadastrado">Este email já está cadastrado.</string>
    <string name="erro_ao_cadastrar_usuario">Erro ao cadastrar usuário</string>

    //Mensagend de aviso
    <string name="aviso_prenecher_campos" translatable="false">Preencha todos os Campos</string>

    <string name="ficha_treino">Ficha de Treino</string>
    <string name="Name">Nome Aluno</string>
    <string name="Titulo_cadastro"> Crie sua conta</string>

    //Tela formulario de cadastro de usuários
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="txt_cadastro">Seja bem vindo! Faça seu cadastro.</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="sair">Sair</string>
    <string name="menu_sair">Sair</string>
    <string name="txt_outras_opcoes">OU</string>

    //Aviso de item vazio
    <string name="item_vazio">Lista de alunos vazia</string>

    //Fab novo aluno
    <string name="novo_aluno">Novo</string>
    <string name="nome">Nome</string>
    <string name="nome_aluno">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="link_de_inscrição">Inscreva-se agora.</string>
    <string name="novo_por_aqui">Novo por aqui?</string>
    <string name="ajuda">Precisa de Ajuda?</string>
    <string name="entrar">Entrar</string>
    <string name="email">Email</string>
    <string name="nome_card">Nome:</string>
    <string name="telefone_card">Telefone:</string>
    <string name="cadastrar_dados_dos_alunos">Cadastrar dados dos alunos.</string>


</resources>