<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_80"
    android:orientation="vertical"
    tools:context=".FormeCadastro">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_txt_senha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_cadastro"
        android:ems="10"
        android:hint="@string/senha"
        android:textCursorDrawable="@drawable/cursor"
        android:inputType="numberPassword"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_txt_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/edit_text_cadastro"
        android:ems="10"
        android:hint="@string/e_mail"
        android:textCursorDrawable="@drawable/cursor"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:cursorVisible="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_aviso_cadastro" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_msg_erro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text=""
        android:textColor="#8E0C0C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_senha" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_aviso_cadastro"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:paddingStart="15dp"
        android:text="@string/txt_cadastro"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_Frame_cadastro" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_effect"
        android:padding="15dp"
        android:text="@string/btn_cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_msg_erro" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_Frame_cadastro"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:navigationIcon="@drawable/ic_voltar"
        android:background="@color/black_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/Titulo_cadastro"
        app:titleMarginStart="50dp"
        app:titleTextColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>