<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_80"
    tools:context=".CadastroAluno">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_cadastro_alunos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Cadastro Aluno"
        app:titleMarginStart="50dp"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_nome_aluno"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/edit_text_cadastro"
        android:hint="@string/nome_aluno"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cadastro_aluno" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_telefone"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_cadastro"
        android:hint="@string/telefone"
        android:textCursorDrawable="@drawable/cursor"
        android:inputType="number|phone"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome_aluno" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_aviso_cadastro_aaluno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        tools:text="Campo Vazio"
        android:paddingStart="10dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_telefone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar_novo_aluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_effect"
        android:text="@string/btn_cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_aviso_cadastro_aaluno" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_cadastro_aluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/cadastrar_dados_dos_alunos"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_cadastro_alunos" />

</androidx.constraintlayout.widget.ConstraintLayout>